[package]
name = "yew-demo"
version = "0.1.0"
edition = "2018"
description = "Yew study project using Trunk"
readme = "README.md"
repository = "https://github.com/deities-online/yew-study.git"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = "0.17"
